Добаврен субмодуль ok2curl

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,2 +1,4 @@
+include ':okToCurl'
 include ':demo', ':androidapimodule'
+project(':okToCurl').projectDir = new File(rootDir, 'Ok2Curl/ok2curl/')
 rootProject.name='Android Api Client'
